[project]
name = "libnar"
version = "4.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adlfs>=2024.12.0",
    "azure-identity>=1.19.0",
    "gcsfs>=2024.12.0",
    "google-auth>=2.37.0",
    "google-cloud-secret-manager>=2.22.0",
    "httpx>=0.28.1",
    "msgspec>=0.19.0",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "s3fs[boto3]>=2024.12.0",
    "slack-sdk>=3.34.0",
]

[project.optional-dependencies]
db = [
    "psycopg[binary]>=3.2.3",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "prefect[aws]>=3.1.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "requests-mock>=1.12.1",
]
